resources/dsaas-stg/dsaas-preview/fabric8-online-docs.route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    service: fabric8-online-docs-app
  name: fabric8-online-docs
spec:
  host: docs.prod-preview.openshift.io
  port:
    targetPort: http
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: edge
  to:
    kind: Service
    name: fabric8-online-docs-app
    weight: 100
  wildcardPolicy: None
